--- a/NetSpy.csproj
+++ b/NetSpy.csproj
@@ -10,6 +10,7 @@
 
   <ItemGroup>
     <PackageReference Include="SimpleWifi" Version="1.0.0" />
+    <PackageReference Include="System.Management" Version="7.0.0" />
   </ItemGroup>
 
 </Project>
